istioGateway.yaml
#@ load("@ytt:data", "data")     
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: authserver
  namespace: #@ data.values.workloadNamespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - #@ 'appsso-acme-fitness.' + data.values.workloadNamespace + '.' + data.values.appDomainName
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authserver
  namespace: #@ data.values.workloadNamespace
spec:
  gateways:
  - authserver
  hosts:
  - #@ 'appsso-acme-fitness.' + data.values.workloadNamespace + '.' data.values.appDomainName
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: appsso-acme-fitness-auth-server
        port:
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: #@ data.values.workloadNamespace
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - #@ 'acme-fitness.' + data.values.appDomainName
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway
  namespace: #@ data.values.workloadNamespace
spec:
  gateways:
  - api-gateway
  hosts:
  - #@ 'acme-fitness.' + data.values.appDomainName
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: acme-fitness-gateway
        port:
          number: 80
